chore: upgrade Angular and related dependencies to version 17.x
- Updated Angular packages to version 17.x in package.json.
- Updated Firebase tools and TypeScript versions.
- Refactored styles.scss to use the new Angular Material theming API.
- Updated variables.scss to align with the new theming structure.

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,4 @@
-$app-primary: mat-palette($mat-deep-purple);
-$app-background: mat-palette($mat-grey, A200);
+@use "@angular/material" as mat;
+
+$app-primary: mat.define-palette(mat.$deep-purple-palette);
+$app-background: mat.define-palette(mat.$gray-palette, A200);
