--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,24 @@
-@import "@angular/material/theming";
+@use "@angular/material" as mat;
 @import "variables.scss";
-@include mat-core();
 
-$primary: mat-palette($mat-purple);
-$accent: mat-palette($mat-green);
-$warn: mat-palette($mat-red);
+@include mat.core();
 
-$dark-primary: mat-palette($mat-purple, 700, 500, 900);
-$dark-accent: mat-palette($mat-green, A200, A100, A400);
-$dark-warn: mat-palette($mat-red);
+$primary: mat.define-palette(mat.$purple-palette);
+$accent: mat.define-palette(mat.$green-palette);
+$warn: mat.define-palette(mat.$red-palette);
 
-$theme: mat-light-theme((
+$dark-primary: mat.define-palette(mat.$purple-palette, 700, 500, 900);
+$dark-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
+$dark-warn: mat.define-palette(mat.$red-palette);
+
+$theme: mat.define-light-theme((
   color: (
     primary: $primary,
     accent: $accent,
     warn: $warn,
   )
 ));
-$dark-theme: mat-dark-theme((
+$dark-theme: mat.define-dark-theme((
   color: (
     primary: $dark-primary,
     accent: $dark-accent,
@@ -25,7 +26,7 @@ $dark-theme: mat-dark-theme((
   )
 ));
 
-@include angular-material-theme($dark-theme);
+@include mat.all-component-themes($dark-theme);
 
 // Global responsive fixes to prevent horizontal overflow
 *,
