--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,4 @@
 @use "@angular/material" as mat;
 
-$app-primary: mat.define-palette(mat.$deep-purple-palette);
-$app-background: mat.define-palette(mat.$gray-palette, A200);
+$app-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$app-background: mat.m2-define-palette(mat.$m2-grey-palette, A200);
